// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpreadSheet Collapse/Expand Tests Tree Mode should only expand current group row nodes 1`] = `
Array [
  "root[&]浙江省",
  "root[&]浙江省[&]杭州市",
  "root[&]浙江省[&]绍兴市",
  "root[&]浙江省[&]宁波市",
  "root[&]浙江省[&]舟山市",
  "root[&]四川省",
]
`;

exports[`SpreadSheet Collapse/Expand Tests Tree Mode should only expand current group row nodes for custom tree 1`] = `
Array [
  "root[&]a-1",
  "root[&]a-1[&]a-1-1",
  "root[&]a-1[&]a-1-2",
  "root[&]a-2",
  "root[&]a-3",
]
`;

exports[`SpreadSheet Collapse/Expand Tests Tree Mode should sync corner cell collapse all icon status 1`] = `
Array [
  "root[&]浙江省",
  "root[&]四川省",
]
`;

exports[`SpreadSheet Collapse/Expand Tests should support expandDepth for custom tree 1`] = `
Array [
  "root[&]a-1",
  "root[&]a-1[&]a-1-1",
  "root[&]a-1[&]a-1-2",
  "root[&]a-2",
  "root[&]a-2[&]a-2-1",
  "root[&]a-2[&]a-2-2",
  "root[&]a-3",
  "root[&]a-3[&]a-3-1",
  "root[&]a-3[&]a-3-2",
  "root[&]a-3[&]measure-5",
]
`;
